example/mysql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: test
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7.18
        name: mysql
        args: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_general_ci", "--explicit_defaults_for_timestamp=1","--max_connections=1000","--skip-name-resolve"]
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-data-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-data-pv-claim
