example/mysql_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: test
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30036
  selector:
    app: mysql
