example/redis_service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: test
spec:
  type: NodePort
  ports:
  - port: 6379
    targetPort: 6379
    nodePort: 30079
  selector:
    app: redis
