example/register_service.yml
apiVersion: v1
kind: Service
metadata:
  name: register-server
  namespace: test
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: register-server
